force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <description>added from sfdx plugin</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>