force-app/main/default/objects/Contact/fields/Active_End_Year_1__c.field-meta.xml
<CustomField>
    <fullName>Active_End_Year_1__c</fullName>
    <label>Active At End Of Year 1?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>