force-app/main/default/objects/Contact/fields/Bike_Type_Interest__c.field-meta.xml
<CustomField>
    <fullName>Bike_Type_Interest__c</fullName>
    <label>Bike Type Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Folding</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>Road</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>