force-app/main/default/objects/Contact/fields/Bikes_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Bikes_Purchased__c</fullName>
    <label>Bikes Purchased</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>