force-app/main/default/objects/Contact/fields/Joined_Group_Rides__c.field-meta.xml
<CustomField>
    <fullName>Joined_Group_Rides__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joined Group Rides?</label>
    <type>Checkbox</type>
</CustomField>