force-app/main/default/objects/Contact/fields/Service_Visits__c.field-meta.xml
<CustomField>
    <fullName>Service_Visits__c</fullName>
    <label>Sevice Visits</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>