force-app/main/default/objects/Contact/fields/Signed_Up_For_Races__c.field-meta.xml
<CustomField>
    <fullName>Signed_Up_For_Races__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed up for Races</label>
    <type>Checkbox</type>
</CustomField>