force-app/main/default/objects/Contact/fields/Velostars_Member__c.field-meta.xml
<CustomField>
    <fullName>Velostars_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VeloStars Member?</label>
    <type>Checkbox</type>
</CustomField>